(2001/06/28 - broeker) Added files in packages/MSDOS that help compiling
		       cscope on MSDOS using the DJGPP compiler.
(2001/06/28 - broeker) Add test for existence of <sys/termios.h> header,
		       to protect platforms that don't have it.
(2001/06/27 - broeker) Yet another set of automake/autoconf changes. 
                       Regenerated auto* files checked in, too. We are
		       'make distcheck' ready, now. Added 'ylwrap' to
		       CVS.
(2001/06/26 - broeker) Changed lex/flex handling in automake/autoconf setup
	               to make 'make distcheck' work cleanly: added new
		       files scanner.h and lookup.h to list of sources. 
		       Made sure both scanner.l and fscanner.l end up in the
		       distribution tarball, as they should.  Removed some
		       quotes from definition of ACNU_DECL_YYTEXT in 
		       configure.in which confused autoheader.
(2001/06/25 - broeker) Change handling of tag-less enums to same method as
	               used in fscanner.l since 2001/06/19.
(2001/06/25 - broeker) Fix SF bug #435535: two uses of yytext[] had been left 
	               over in fscanner.l, causing incorrect compression of
		       keywords #define and #include.
(2001/06/19 - broeker) More bugfixes and changes to flex scanner. Handling
	               of preprocessing directives treats whitespace and
		       garbage after the keyword more gently. It also avoids
		       treating lex patterns as preprocessing directives. And 
		       enum/struct/union definitions without a tag are no
		       longer written out to the database, which should help
		       to get rid of 'cannot get sourceline' error messages.
		       Also a new rule to compress whitespace sequences by
		       means of a flex rule (should to be faster than 
		       hand-coding).
(2001/06/15 - broeker) Bugfix to flex scanner: comments after an #endif, 
	               without any whitespace in between, would be dumped
		       to stdout.